--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "backend process setup",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javascript",
@@ -13,6 +14,6 @@
   "author": "trishir",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "prettier": "^3.2.5"
   }
 }
